--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.8.4",
+    "dotenv": "^16.4.7",
+    "mongoose": "^8.12.2",
+    "next": "15.2.3",
     "react": "^19.0.0",
+    "react-country-state-city": "^1.1.12",
     "react-dom": "^19.0.0",
-    "next": "15.2.3"
+    "react-phone-input-2": "^2.15.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4"
   }
 }
